--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
   </app-root>
 
   <!-- jQuery Plugins -->
-  <!-- <script src="./assets/js/jquery.min.js"></script> -->
+   <script src="./assets/js/jquery.min.js"></script> 
   <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
   <!-- <script src="./assets/js/slick.min.js"></script>
   <script src="./assets/js/nouislider.min.js"></script>
